# purple-plugin-pack

./: .hgignore  .mtn-ignore  .todo  AUTHORS  COPYING  ChangeLog  Changelog  INSTALL.WIN32  Makefile  Makefile.am  Makefile.mingw  NEWS  README  TODO  VERSION  autogen.sh  buddyedit.c  buddylang.c  buddynotes.c  buddytimezone.c  configure.ac  gaim-plugin_pack.spec.in  gpp_config.h.mingw  gtktimezone.c  gtktimezonetest.c  localtime.c  menuconfig  plugin_list.sh  plugin_pack.nsi  plugin_pack.py  plugin_pack.spec.in  pluginpack.py  pp_config.h.mingw  private.h  purple-plugin-pack-installer.nsi  win_pp.mak
adium_xml_logger/: Makefile.am  Makefile.mingw  adiumxmllogger.c
album/: ChangeLog  Makefile.am  Makefile.mingw  README  TODO  album-ui.c  album-ui.h  album.c  album.h  plugins.cfg
autoaccept/: Makefile.am  Makefile.mingw  autoaccept.c
autoprofile/: Makefile.am  Makefile.mingw  autoaway.c  autoprofile.c  autoprofile.h  autoreply.c  comp_countdownup.c  comp_executable.c  comp_http.c  comp_logstats.c  comp_logstats.h  comp_logstats_gtk.c  comp_quotation.c  comp_rss.c  comp_rss.h  comp_rss_parser.c  comp_rss_xanga.c  comp_textfile.c  comp_timestamp.c  comp_uptime.c  component.c  component.h  gtk_actions.c  gtk_away_msgs.c  gtk_widget.c  plugins.cfg  preferences.c  sizes.h  utility.c  utility.h  utility_rfc822.c  widget.c  widget.h
autorejoin/: Makefile.am  Makefile.mingw  autorejoin.c
autoreply/: Makefile.am  Makefile.mingw  autoreply.c  plugins.cfg
awaynotify/: Makefile.am  awaynotify.c  plugins.cfg
bash/: Makefile.am  Makefile.mingw  bash.c  plugins.cfg
bit/: Makefile.am  Makefile.mingw  bit.c  plugins.cfg
blistops/: Makefile.am  Makefile.mingw  blistops.c  plugins.cfg
broadcast/: Makefile.am  Makefile.mingw  broadcast.c
buddynote/: Makefile.am  Makefile.mingw  buddynote.c
buddytime/: Makefile.am  buddytime.c  buddytime.h  gtkbuddytime.c  gtktimezone.c  gtktimezonetest.c  localtime.h  plugins.cfg  recurse.c  recurse.h  recursetest.c  timetest.c  tzfile.h
buddytools/: Changelog
buzzer/: Makefile.am  Makefile.mingw  im_buzz.c
capsnot/: Makefile.am  Makefile.mingw  capsnot.c  plugins.cfg
chronic/: Makefile.am  chronic.c  plugins.cfg
colorize/: Makefile.am  Makefile.mingw  colorize.c  plugins.cfg
common/: Makefile.am  core-template.c  core_template.c  glib_compat.h  gpp_compat.h  gtk-template.c  gtk_template.c  i18n.h  pp_internal.h  purple_template.c
convbadger/: Makefile.am  Makefile.mingw  convbadger.c  plugins.cfg
convcolors/: Makefile.am  Makefile.mingw  convcolors.c
debian/: README.Debian  changelog  control  copyright  files  rules  update-control  watch
dewysiwygification/: Makefile.am  Makefile.mingw  dewysiwygification.c  plugins.cfg
dice/: Makefile.am  Makefile.mingw  dice.c  plugins.cfg  plugins.ini
difftopic/: Makefile.am  Makefile.mingw  difftopic.c  plugins.cfg
doc/: Makefile.am  quickhack.txt
eight_ball/: Makefile.am  Makefile.mingw  eight_ball.c  plugins.cfg
enhancedhist/: Makefile.am  Makefile.mingw  enhanced_hist.c  enhanced_history.c  enhancedhist.c  plugins.cfg
findip/: Makefile.am  Makefile.mingw  findip.c  plugins.cfg
flip/: Makefile.am  Makefile.mingw  flip.c  plugins.cfg  plugins.ini
gRIM/: Makefile.am  Makefile.mingw  gRIM.c  plugins.cfg
gaim-schedule/: Makefile.am  gaim-schedule.c  schedule.c  schedule.h
gaim-xchat/: Makefile.am  gaim-xchat.c  xtext.c  xtext.h
gaim-xmms-remote/: Makefile.am  xmmsremote.c
google/: Makefile.am  Makefile.mingw  google.c  plugins.cfg
groupmsg/: Makefile.am  Makefile.mingw  groupmsg.c  plugins.cfg
hideconv/: Makefile.am  Makefile.mingw  hideconv.c  plugins.cfg
highlight/: Makefile.am  Makefile.mingw  highlight.c  plugins.cfg
icon-override/: Makefile.am  Makefile.mingw  icon_override.c  plugins.cfg
ignorance/: Makefile.am  callbacks.c  callbacks.h  ignorance.c  ignorance.conf  ignorance.h  ignorance_denizen.c  ignorance_denizen.h  ignorance_internal.h  ignorance_level.c  ignorance_level.h  ignorance_rule.c  ignorance_rule.h  ignorance_violation.c  ignorance_violation.h  interface.c  interface.h  plugins.cfg  regex.c  support.c  support.h
ignore/: Makefile.am  Makefile.mingw  ignore.c  plugins.cfg
infopane/: Makefile.am  Makefile.mingw  infopane.c  plugins.cfg
irc-more/: Makefile.am  Makefile.mingw  irc-more.c  plugins.cfg
irchelper/: ChangeLog  IDEAS  Makefile.am  Makefile.mingw  PHILOSOPHY  README  irchelper.c  plugins.cfg
irssi/: Makefile.am  Makefile.mingw  datechange.c  datechange.h  irssi.c  irssi.h  lastlog.c  lastlog.h  layout.c  layout.h  plugins.cfg  textfmt.c  textfmt.h  window.c  window.h
irssidate/: Makefile.am  Makefile.mingw  irssidate.c
lastlog/: Makefile.am  lastlog.c
lastseen/: Makefile.am  Makefile.mingw  lastseen.c  plugins.cfg
listhandler/: .todo  Makefile.am  Makefile.mingw  aim_blt_files.c  aim_blt_files.h  alias_xml_files.c  alias_xml_files.h  gen_xml_files.c  gen_xml_files.h  lh_util.c  lh_util.h  listhandler.c  listhandler.h  migrate.c  migrate.h  nb_dat_files.c  plugins.cfg  purple_blist_xml.c  purple_blist_xml.h
listlog/: Makefile.am  Makefile.mingw  listlog.c  plugins.cfg
m4/: Makefile.am  pluginpack.m4
manualsize/: Makefile.am  Makefile.mingw  manualsize.c
markerline/: Makefile.am  Makefile.mingw  markerline.c
msglen/: Makefile.am  Makefile.mingw  msglen.c  plugins.cfg
mystatusbox/: Makefile.am  Makefile.mingw  mystatusbox.c  plugins.cfg
napster/: Makefile.am  Makefile.mingw  napster.c  plugins.cfg
newline/: Makefile.am  Makefile.mingw  newline.c
nicksaid/: Makefile.am  Makefile.mingw  nicksaid.c  plugins.cfg
ning/: Makefile.am  Makefile.mingw  ning.c  ning.h  ning_chat.c  ning_chat.h  ning_connection.c  ning_connection.h  plugins.cfg
nomobility/: Makefile.am  Makefile.mingw  nomobility.c  plugins.cfg
offlinemsg/: Makefile.am  Makefile.mingw  offlinemsg.c
okcupid/: Makefile.am  Makefile.mingw  okc_blist.c  okc_blist.h  okc_connection.h  okc_messages.c  okc_messages.h  okcupid.c  okcupid.h  plugins.cfg
oldlogger/: Makefile.am  Makefile.mingw  oldlogger.c  plugins.cfg
omegle/: Makefile.am  (+5 more)
(+103 files in other folders)
